@@ -1,3 +1,11 @@
+Sat Dec  6 11:55:42 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/tds/convert.c src/tds/numeric.c:
+	* src/tds/unittests/dataread.c:
+	- fixed money rounding
+	- fixed conversion money -> char (only 2 decimal digits)
+	- improve test on money data
+	- use TDS_INT8 if available improving money -> char performance
+
 Fri Dec  5 23:00:31 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* vms/config_h.vms vms/descrip_mms.template:
 	- applied Craig A. Berry patch (VMS update)
